--- a/libs/sync/src/lib/server-selection/server-setup.component.scss
+++ b/libs/sync/src/lib/server-selection/server-setup.component.scss
@@ -2,11 +2,10 @@
 
 .header {
   display: flex;
-  margin-bottom: rhythm(5);
 }
 
-h1 {
-  margin-left: rhythm(2);
+p {
+  margin-bottom: rhythm(4);
 }
 
 .container {
