--- a/libs/sync/src/lib/upload/sync.component.html
+++ b/libs/sync/src/lib/upload/sync.component.html
@@ -51,15 +51,15 @@
 }
 @if (selectedTab === 'settings') {
   <section>
-    <nsy-edit-settings></nsy-edit-settings>
+    <nsy-edit-settings (done)="done()"></nsy-edit-settings>
   </section>
 }
 @if (selectedTab === 'folders') {
-  <section><nsy-edit-folders></nsy-edit-folders></section>
+  <section><nsy-edit-folders (done)="done()"></nsy-edit-folders></section>
 }
 @if (selectedTab === 'filters') {
   <section>TO BE DONE</section>
 }
 @if (selectedTab === 'labels') {
-  <section><nsy-edit-labels></nsy-edit-labels></section>
+  <section><nsy-edit-labels (done)="done()"></nsy-edit-labels></section>
 }
