--- a/libs/sync/src/lib/server-selection/server-setup.component.html
+++ b/libs/sync/src/lib/server-selection/server-setup.component.html
@@ -1,5 +1,15 @@
-<h1>{{ 'upload.server.title' | translate }}</h1>
+<div class="header">
+  <pa-button
+    icon="chevron-left"
+    aspect="basic"
+    [paTooltip]="'upload.server.back' | translate"
+    (click)="back()">
+    {{ 'upload.server.back' | translate }}
+  </pa-button>
+  <h1>{{ 'upload.server.title' | translate }}</h1>
+</div>
 <div class="container">
+  <p [innerHTML]="'upload.server.description' | translate"></p>
   <pa-input
     [formControl]="serverUrl"
     placeholder="https://my.sync.server"
@@ -7,6 +17,7 @@
     {{ 'upload.server.url' | translate }}
   </pa-input>
   <pa-button
+    class="save-button"
     (click)="save()"
     kind="primary"
     [disabled]="serverUrl.pristine">
