--- a/libs/sync/src/lib/server-selection/server-setup.component.scss
+++ b/libs/sync/src/lib/server-selection/server-setup.component.scss
@@ -1,13 +1,17 @@
 @import 'apps/dashboard/src/variables';
 
-h1 {
-  margin-bottom: rhythm(5);
+.header {
+  display: flex;
+}
+
+p {
+  margin-bottom: rhythm(4);
 }
 
 .container {
   max-width: rhythm(80);
 }
 
-pa-button {
+.save-button {
   margin-top: rhythm(3);
 }
