make prompt lab accessible for kb admin (#1365)

--- a/libs/common/src/lib/navbar/navbar.component.html
+++ b/libs/common/src/lib/navbar/navbar.component.html
@@ -161,7 +161,7 @@
                   <span class="nav-link-title">{{ 'navbar.synonyms' | translate }}</span>
                 </a>
               }
-              @if (isAccountManager | async) {
+              @if (isAdmin | async) {
                 @if (isPromptLabEnabled | async) {
                   <a
                     [routerLink]="[kbUrl + '/prompt-lab']"
@@ -172,6 +172,8 @@
                     <span class="nav-link-title">{{ 'navbar.prompt-lab' | translate }}</span>
                   </a>
                 }
+              }
+              @if (isAccountManager | async) {
                 <a
                   [routerLink]="kbUrl + '/users'"
                   routerLinkActive="active"
