--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -241,6 +241,26 @@
                         </pa-popover>
                       </div>
                       <div class="toggle-and-help">
+                        <pa-select
+                          formControlName="generativeModel"
+                          [label]="
+                            'widget.generator.advanced.generative-answer-category.generative-model.label' | translate
+                          ">
+                          <pa-option value="">&nbsp;</pa-option>
+                          <pa-option
+                            *ngFor="let model of generativeModels | async"
+                            [value]="model.value">
+                            {{ model | learningOption: 'generative_model' }}
+                          </pa-option>
+                        </pa-select>
+                        <pa-icon
+                          name="info"
+                          [paPopover]="generativeModelHelp" />
+                        <pa-popover #generativeModelHelp>
+                          {{ 'widget.generator.advanced.generative-answer-category.generative-model.help' | translate }}
+                        </pa-popover>
+                      </div>
+                      <div class="toggle-and-help">
                         <pa-toggle
                           labelOnRight
                           formControlName="hideResults">
