Prevent sanitizing chevrons from prompts
Also increase radio-group max-height for models to stay displayed on two columns (we added quite a lot of models lately)

--- a/libs/common/src/lib/ai-models/ai-models.component.html
+++ b/libs/common/src/lib/ai-models/ai-models.component.html
@@ -102,6 +102,7 @@
                           <pa-textarea
                             formControlName="prompt"
                             resizable
+                            acceptHtmlTags
                             [rows]="3"
                             [help]="prompt.info || ''">
                             {{ prompt.title }}
@@ -132,6 +133,7 @@
                           <pa-textarea
                             formControlName="system"
                             resizable
+                            acceptHtmlTags
                             [rows]="3"
                             [help]="system.info || ''">
                             {{ 'kb.ai-models.generative_model.system_prompt_label' | translate }}
