--- a/libs/common/src/lib/prompt-lab/prompt-lab.component.html
+++ b/libs/common/src/lib/prompt-lab/prompt-lab.component.html
@@ -66,6 +66,7 @@
           <div class="field-and-button">
             <pa-textarea
               resizable
+              acceptHtmlTags
               rows="3"
               [(value)]="currentPrompt"
               [help]="'prompt-lab.configuration.prompts.placeholder' | translate"
