Add a toggle to enable or not generative model selection

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -241,25 +241,37 @@
                         </pa-popover>
                       </div>
                       <div class="toggle-and-help">
-                        <pa-select
-                          formControlName="generativeModel"
-                          [label]="
+                        <pa-toggle
+                          labelOnRight
+                          formControlName="generativeModelToggle"
+                          (valueChange)="toggleGenerativeModels()">
+                          {{
                             'widget.generator.advanced.generative-answer-category.generative-model.label' | translate
-                          ">
-                          <pa-option value="">&nbsp;</pa-option>
-                          @for (model of generativeModels; track model.value) {
-                            <pa-option [value]="model.value">
-                              {{ model | learningOption: 'generative_model' }}
-                            </pa-option>
-                          }
-                        </pa-select>
+                          }}
+                        </pa-toggle>
                         <pa-icon
                           name="info"
-                          [paPopover]="generativeModelHelp" />
-                        <pa-popover #generativeModelHelp>
+                          [paPopover]="generativeModelToggleHelp" />
+                        <pa-popover #generativeModelToggleHelp>
                           {{ 'widget.generator.advanced.generative-answer-category.generative-model.help' | translate }}
                         </pa-popover>
                       </div>
+                      @if (generativeModelEnabled) {
+                        <div class="toggle-and-help">
+                          <pa-select
+                            formControlName="generativeModel"
+                            [label]="
+                              'widget.generator.advanced.generative-answer-category.generative-model.label' | translate
+                            ">
+                            @for (model of generativeModels; track model.value) {
+                              <pa-option [value]="model.value">
+                                {{ model | learningOption: 'generative_model' }}
+                              </pa-option>
+                            }
+                          </pa-select>
+                        </div>
+                      }
+
                       <div class="toggle-and-help">
                         <pa-toggle
                           labelOnRight
