Fix space between prompt example select box and textarea

--- a/libs/common/src/lib/prompt-lab/prompt-lab.component.scss
+++ b/libs/common/src/lib/prompt-lab/prompt-lab.component.scss
@@ -57,6 +57,7 @@
   .select-with-background {
     display: block;
     margin-top: rhythm(1);
+    margin-bottom: rhythm(2);
 
     ::ng-deep .pa-field .pa-field-control {
       background-color: $color-neutral-lightest;
