--- a/libs/common/src/lib/entities/entity-list/entity-list.component.html
+++ b/libs/common/src/lib/entities/entity-list/entity-list.component.html
@@ -15,7 +15,8 @@
           <pa-checkbox
             [disabled]="(isAdminOrContrib | async) === false"
             [value]="selection.includes(ner.value)"
-            (change)="toggleSelection(ner.value)"></pa-checkbox>
+            (change)="toggleSelection(ner.value)"
+            [noEllipsis]="true"></pa-checkbox>
         </pa-table-cell>
         <pa-table-cell>
           {{ ner.value }}
