decouple gen models loading from the rest of rendering

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -256,7 +256,7 @@
                           {{ 'widget.generator.advanced.generative-answer-category.generative-model.help' | translate }}
                         </pa-popover>
                       </div>
-                      @if (generativeModelEnabled) {
+                      @if (generativeModelEnabled && generativeModels.length > 0) {
                         <div class="toggle-and-help">
                           <pa-select
                             formControlName="generativeModel"
