[sc-9203] Trigger content loaded when presets are loaded
Hide generative model toggle and selection when schema fails

--- a/libs/common/src/lib/widgets/widget-generator.component.html
+++ b/libs/common/src/lib/widgets/widget-generator.component.html
@@ -27,7 +27,7 @@
             <form [formGroup]="presetForm">
               <pa-expander
                 emitOnly
-                [contentLoaded]="(presetList | async)?.length > 0"
+                [contentLoaded]="presetList | async"
                 [expanded]="presetAccordionExpanded === 'preset'"
                 (toggleExpander)="toggleAccordion('preset')">
                 <pa-expander-header>
