Fix getZones method
  - return all zones when there is no account (regular onboarding)
  - return all zones when there is an error while get the account subscription
  - return all zones when the subscription is not AWS
  - return only AWS zones when subscription is AWS and the environment is not dev or stage.

--- a/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
+++ b/libs/common/src/lib/knowledge-box-settings/knowledge-box-settings.component.html
@@ -28,7 +28,7 @@
           <pa-input
             formControlName="title"
             [errorMessages]="validationMessages['title']">
-            {{ 'kb.name' | translate }}
+            {{ 'kb.form.name' | translate }}
           </pa-input>
 
           <pa-textarea
