Fix getZones again
Make sure to take only 1 account, so we don't block forkJoins when using `getZones`

--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -52,11 +52,11 @@
           formControlName="zone"
           [readonly]="(zones || []).length <= 1"
           [label]="'generic.zone' | translate">
-          <pa-option
-            *ngFor="let zone of zones"
-            [value]="zone.id">
-            {{ zone.title }}
-          </pa-option>
+          @for (zone of zones; track zone.slug) {
+            <pa-option [value]="zone.id">
+              {{ zone.title }}
+            </pa-option>
+          }
         </pa-select>
       </div>
     </form>
