--- a/apps/dashboard/src/app/onboarding/aws-onboarding/step1-budget/step1-budget.component.html
+++ b/apps/dashboard/src/app/onboarding/aws-onboarding/step1-budget/step1-budget.component.html
@@ -16,6 +16,7 @@
     $
   </pa-input>
   <pa-button
+    class="budget-button"
     kind="primary"
     type="submit">
     {{ 'onboarding.aws.monthly-budget.set-up-account-button' | translate }}
